# Deep-Learning-with-Python-2ed-cn

./: README.md
chapter04/: pyproject.toml
chapter04/src/: 01.py  02.py  03.py
chapter05/: pyproject.toml
chapter05/src/: 01.py  02.py  07.py  08.py  09.py  10_12.py  13_14.py  15.py
chapter07/: pyproject.toml
chapter07/src/: 01.py  02_05.py  06.py  07_08.py  09.py  10_11.py  12_14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22_25.py  26.py  27.py  tb.py
chapter08/: .gitignore  README.md  listings.ipynb  main.py  pyproject.toml
chapter08/src/: 01_04.py  05.py  06.py  07_12.py  13.py  14_17.py  18.py  19_22.py  23.py
