[project]
name = "chapter07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pydot>=4.0.0",
    "tensorboard>=2.19.0",
    "tensorflow>=2.19.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
